# papercast-pdf

./: .gitignore  setup.cfg
papercast_pdf/: __init__.py  pdf.py  processors.py
