[metadata]
name = papercast_pdf
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = PDF Processor plugin for Papercast
url = https://github.com/papercast-dev/papercast-pdf

[options]
packages = find:
install_requires =
    papercast
    requests
    wget
    # Any dependencies required by the plugin

[options.entry_points]
papercast.processors =
    PDFProcessor = papercast_pdf:PDFProcessor
